# bendier

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  requirements.txt
python/: run_ral_sims.bash  run_simple_sims.bash  run_sims.bash
python/apps/: cosserat_forward_sim.py  parallel_forward_sim.py  rigid_forward_sim.py  tendon_forward_sim.py
python/bendier/: __init__.py
python/bendier/plotting/: __init__.py  cosserat_rod_plotter.py  parallel_robot_plotter.py  tendon_robot_plotter.py  utils.py
python/scripts/cosserat/: benchmark.py  config.py  spring_sim.py  test_num_nodes.py  test_spring_shape.py  test_tip_priors.py
python/scripts/cosserat_rod/: app.py  benchmark.py  config.py  test_spring_shape.py
python/scripts/parallel_robot/: app.py  benchmark.py  config.py  test_simple.py  test_three_rods.py  test_tip_force.py
python/scripts/rigid_robot/: app.py  config.py  test_jacobian.py
python/scripts/tendon_robot/: app.py  benchmark.py  config.py  test_jacobian.py  test_nees.py  test_simple.py  test_three_tendons.py  test_tip_force.py  utils.py
python/src/bendier/: __init__.py
python/src/bendier/plotting/: cosserat_rod_plotter.py  parallel_robot_plotter.py  tendon_robot_plotter.py  utils.py
python/src/bendier/viser_plotting/: __init__.py  cosserat_rod_plotter.py  parallel_robot_plotter.py  tendon_robot_plotter.py  utils.py
python/src/bendier/visualization/: __init__.py  base_plotter.py  cosserat_rod_plotter.py  mpl_utils.py  parallel_robot_plotter.py  rigid_robot_plotter.py  tendon_robot_plotter.py  utils.py
python/tests/cosserat/: benchmark.py  config.py  spring_sim.py  test_num_nodes.py  test_priors_sim.py
python/tests/parallel_robot/: benchmark.py  config.py  test_simple.py  test_tip_force.py
python/tests/tendon_robot/: benchmark.py  config.py  test_nees.py  test_simple.py  test_tip_force.py  utils.py
python/videos/: make_movies.sh
src/cosserat_rod/: BoundaryStressFactor.cpp  BoundaryStressFactor.h  CosseratBoundaryEquilibriumFactor.cpp  CosseratBoundaryEquilibriumFactor.h  CosseratConstitutiveFactor.cpp  CosseratConstitutiveFactor.h  CosseratEquilibriumFactor.cpp  CosseratEquilibriumFactor.h  CosseratRodModel.cpp  CosseratRodModel.h  CosseratRodSolver.cpp  CosseratRodSolver.h  CosseratStrainFactor.cpp  CosseratStrainFactor.h  CosseratStressFactor.cpp  CosseratStressFactor.h  pybind.cpp
src/measurement/: ActuationForceMeasFactor.cpp  ActuationForceMeasFactor.h  PositionPriorFactor.cpp  PositionPriorFactor.h
src/parallel_robot/: ParallelRobotModel.cpp  ParallelRobotModel.h  ParallelRobotSolver.cpp  ParallelRobotSolver.h  PlatformWrenchBalanceFactor.cpp  PlatformWrenchBalanceFactor.h  SingleRodBaseFactor.cpp  SingleRodBaseFactor.h  pybind.cpp
src/pybind/: BindHelpers.h  bindings.cpp  bindings.h
src/rigid_robot/: RigidJointFactor.cpp  RigidJointFactor.h  RigidJointTorqueFactor.cpp  RigidJointTorqueFactor.h  RigidRobotModel.cpp  RigidRobotModel.h  RigidRobotSolver.cpp  RigidRobotSolver.h  pybind.cpp
src/tendon_robot/: TendonDiscWrenchFactor.cpp  TendonDiscWrenchFactor.h  TendonDisplacementFactor.cpp  TendonDisplacementFactor.h  TendonGeometry.cpp  TendonGeometry.h  TendonRobotModel.cpp  TendonRobotModel.h  TendonRobotSolver.cpp  TendonRobotSolver.h  pybind.cpp
src/utils/: Gaussians.h  MiscInline.h  ModelConcept.h  SolverBase.cpp  SolverBase.h  WrenchTransforms.cpp  WrenchTransforms.h
tests/: JacobianTests.cpp  RobotJacobianTests.cpp
