[build-system]
requires = ["scikit-build-core", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build.cmake.define]
CMAKE_EXPORT_COMPILE_COMMANDS = "ON"
BENDIER_BUILD_PYTHON = "ON"

[tool.scikit-build]
build-dir = "build"

[tool.scikit-build.wheel]
packages = ["python/src/bendier"]

[project]
name = "bendier"
version = "1.0.0"
description = "Bayesian Estimation of Nonlinear Deformation: Inference for Elastic Robots"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==2.3.5",
    "scipy==1.16.3",
    "matplotlib==3.10.7",
    "pyvista==0.46.4",
    "vtk==9.5.2",
    "imageio==2.37.3",
    "imageio-ffmpeg==0.6.0",
    "viser==1.0.30",
]